--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "mysql",
   "host": "localhost",
   "port": 3306,
-  "username": "username",
-  "password": "password",
-  "database": "db",
+  "username": "root",
+  "password": "chivasdakota",
+  "database": "be-eazy-db",
   "synchronize": true,
   "logging": false,
   "entities": [
