--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "start": "node dist/index.js",
       "dev": "nodemon --inspect dist/index.js",
+      "dev-ts" : "nodemon src/index.ts",
       "build": "tsc",
       "watch": "tsc -w",
       "test": "echo \"Error: no test specified\" && exit 1"
