--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "mysql2": "^2.2.5",
       "oauth2-server": "^3.1.1",
       "reflect-metadata": "^0.1.13",
+      "tslint": "^6.1.3",
       "type-graphql": "^1.1.1",
       "typeorm": "0.2.29"
    }
