--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-   "name": "be-eazy-backend",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "start": "node dist/index.js",
-      "dev": "nodemon --inspect dist/index.js",
-      "build": "tsc",
-      "watch": "tsc -w",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "devDependencies": {
-      "@types/dotenv-parse-variables": "^0.2.0",
-      "@types/express": "^4.17.9",
-      "@types/jsonwebtoken": "^8.5.0",
-      "@types/node": "^14.14.12",
-      "@types/validator": "^13.1.1",
-      "nodemon": "^2.0.6",
-      "ts-node": "^9.1.1",
-      "typescript": "^4.1.2"
-   },
-   "dependencies": {
-      "apollo-server-express": "^2.19.0",
-      "argon2": "^0.27.1",
-      "class-validator": "^0.12.2",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "dotenv-parse-variables": "^1.0.1",
-      "express": "^4.17.1",
-      "jsonwebtoken": "^8.5.1",
-      "mysql2": "^2.2.5",
-      "oauth2-server": "^3.1.1",
-      "reflect-metadata": "^0.1.13",
-      "tslint": "^6.1.3",
-      "type-graphql": "^1.1.1",
-      "typeorm": "0.2.29"
-   }
+  "name": "be-eazy-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon --inspect dist/index.js",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/dotenv-parse-variables": "^0.2.0",
+    "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.12",
+    "@types/validator": "^13.1.1",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.19.0",
+    "argon2": "^0.27.1",
+    "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "dotenv-parse-variables": "^1.0.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
+    "oauth2-server": "^3.1.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "typeorm": "0.2.29"
+  }
 }
